Updated items.css to fix a few class names that were bugged and therefore not showing items properly

--- a/flask/static/items.css
+++ b/flask/static/items.css
@@ -154,7 +154,7 @@
     background-position: -300px 0;
 }
 
-.B-F-Sword {
+.B\.-F\.-Sword {
     width: 25px;
     height: 25px;
     padding: 12.3px;
@@ -1834,7 +1834,7 @@
     background-position: -200px -200px;
 }
 
-.Jak_Sho_-The-Protean {
+.Jak_Sho\,-The-Protean {
     width: 25px;
     height: 25px;
     padding: 12.3px;
@@ -2890,7 +2890,7 @@
     background-position: -150px -325px;
 }
 
-.Rite-of-Ruin {
+.Rite-Of-Ruin {
     width: 25px;
     height: 25px;
     padding: 12.3px;
@@ -3586,7 +3586,7 @@
     background-position: -250px -400px;
 }
 
-.T-U-R-B-O- {
+.T\.U\.R\.B\.O\. {
     width: 25px;
     height: 25px;
     padding: 12.3px;
